# MindSafe

./: .gitignore  404.html  CNAME  Cargo.toml  NOTICE.md  README.md  TODO.md  d86bc757-790a-49c1-a672-b65234cde81b.db  foss-compliance.html  index.html  print.html  push.py  push.sh  searcher-c2a407aa.js  toc-8fb80dfe.js  toc.html
.github/workflows/: build.yml  deploy.yml
additional/: auto-save.html  export-options.html  note-history.html  tags.html
assets/languages/: en-US.ftl  es-ES.ftl
book/: 404.html  constants.rs  foss-compliance.html  index.html  print.html  searchindex-53b406e1.js  shortcuts.rs
book/additional/: auto-save.html  export-options.html  note-history.html  tags.html
book/models/: activity_logs.rs
book/performance/: fast-and-portable.html  sqlite.html
book/privacy/: completely-offline.html  local-storage.html  no-data-collection.html
book/security/: activities.html  end-to-end-encryption.html  password-protected-key.html  resistance-to-attacks.html  safe-copy.html
book/services/: database.rs  encryption.rs  notes.rs  tabs.rs
book/ui/: formatter.rs  pages.rs
docs/: book.toml
docs/src/: introduction.md
icons/: icon.icns
performance/: fast-and-portable.html  sqlite.html
privacy/: completely-offline.html  local-storage.html  no-data-collection.html
security/: activities.html  end-to-end-encryption.html  password-protected-key.html  resistance-to-attacks.html  safe-copy.html
src/: constants.rs  i18n.rs  layouter.rs  main.rs  modals.rs  pages.rs  widgets.rs
src/additional/: auto-save.md  export-options.md  note-history.md  tags.md
src/models/: activities.rs  activity_logs.rs  config.rs  mod.rs  note.rs  tag.rs  tag_relation.rs
src/performance/: fast-and-portable.md  sqlite.md
src/privacy/: completely-offline.md  no-data-collection.md
src/security/: end-to-end-encryption.md  password-protected-key.md  resistance-to-attacks.md  safe-copy.md
src/services/: activity_logs.rs  authentication.rs  data.rs  database.rs  encryption.rs  hash.rs  mod.rs  notes.rs  tabs.rs
src/ui/: mod.rs  modals.rs  widgets.rs
